@@ -38,7 +38,7 @@ import re
 from elasticapm.instrumentation.packages.base import AbstractInstrumentedModule
 from elasticapm.traces import capture_span
 from elasticapm.utils import compat, wrapt
-from elasticapm.utils.encoding import force_text
+from elasticapm.utils.encoding import force_text, shorten
 
 
 class Literal(object):
@@ -225,6 +225,11 @@ class CursorProxy(wrapt.ObjectProxy):
             signature = sql_string + "()"
         else:
             signature = self.extract_signature(sql_string)
+
+        # Truncate sql_string to 10000 characters to prevent large queries from
+        # causing an error to APM server.
+        sql_string = shorten(sql_string, string_length=10000)
+
         with capture_span(
             signature,
             span_type="db",
