@@ -35,6 +35,7 @@ from elasticapm.instrumentation.packages.dbapi2 import (
     extract_signature,
 )
 from elasticapm.traces import capture_span
+from elasticapm.utils.encoding import shorten
 
 
 class SQLiteCursorProxy(CursorProxy):
@@ -52,12 +53,13 @@ class SQLiteConnectionProxy(ConnectionProxy):
 
     def _trace_sql(self, method, sql, params):
         signature = extract_signature(sql)
+        sql_string = shorten(sql, string_length=10000)
         with capture_span(
             signature,
             span_type="db",
             span_subtype="sqlite",
             span_action="query",
-            extra={"db": {"type": "sql", "statement": sql}},
+            extra={"db": {"type": "sql", "statement": sql_string}},
         ):
             if params is None:
                 return method(sql)
